# git-stats

./: .gitignore  Cargo.toml  README.md
benches/: scan.rs
src/: achievements.rs  cache.rs  cli.rs  config.rs  lib.rs  main.rs  models.rs  palette.rs  pipeline.rs  scanner.rs
src/git/: extract.rs
src/output/: json.rs  markdown.rs  mod.rs  summary.rs
src/stats/: mod.rs
src/ui/: app.rs  events.rs  mod.rs
src/ui/views/: achievements.rs  authors.rs  dashboard.rs  mod.rs  repos.rs  timeline.rs
src/ui/widgets/: heatmap.rs  mod.rs
tests/: integration.rs
