[package]
name = "git-stats"
version = "0.1.0"
edition = "2021"
authors = ["justusemecnc"]
description = "Terminal Git activity dashboard"
license = "MIT"

[dependencies]
git2 = { version = "0.19", features = ["vendored-libgit2"] }
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
directories = "5"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "scan"
harness = false
